[package]
name = "vulkan-tutorial-rs"
version = "0.1.0"
authors = ["Benjamin Wasty <benny.wasty@gmail.com>"]
autobins = false

[dependencies]
vulkano = "0.10.0"
vulkano-shader-derive = "0.10.0"
image = "0.19.0"
vulkano-win = "0.10.0"
winit = "0.17.1"

[[bin]]
name = "main"
path = "src/bin/13_framebuffers.rs"
